--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "4.1.5",
     "express": "4.1.2",
     "minimist": "0.1.0",
+    "nudge": "0.1.2",
     "sentiment": "1.0.0-alpha",
     "twit": "1.1.15"
   },
