--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "sentimentPeeps",
+  "name": "sentiment-peeps",
   "version": "0.0.0",
   "description": "Peeps!",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Mark S. Everitt",
+  "license": "MIT",
   "dependencies": {
-    "Sentimental": "1.0.1",
-    "browserify": "4.1.5",
     "express": "4.1.2",
     "minimist": "0.1.0",
     "nudge": "0.1.2",
@@ -18,63 +16,7 @@
     "twit": "1.1.15"
   },
   "devDependencies": {
-    "jshint": "2.5.1"
-  },
-  "jshintConfig": {
-    "predef": [
-      "describe",
-      "it",
-      "before",
-      "beforeEach",
-      "after",
-      "afterEach"
-    ],
-    "passfail": false,
-    "maxerr": 50,
-    "browser": false,
-    "node": true,
-    "rhino": false,
-    "couch": false,
-    "wsh": false,
-    "jquery": false,
-    "prototypejs": false,
-    "mootools": false,
-    "dojo": false,
-    "debug": false,
-    "devel": false,
-    "strict": false,
-    "globalstrict": true,
-    "camelcase": true,
-    "asi": false,
-    "laxbreak": false,
-    "bitwise": true,
-    "boss": false,
-    "curly": true,
-    "eqeqeq": true,
-    "eqnull": false,
-    "evil": false,
-    "expr": false,
-    "noarg": true,
-    "forin": false,
-    "immed": true,
-    "latedef": true,
-    "loopfunc": false,
-    "regexp": false,
-    "regexdash": false,
-    "scripturl": false,
-    "shadow": false,
-    "supernew": false,
-    "undef": true,
-    "onevar": false,
-    "unused": true,
-    "newcap": true,
-    "noempty": true,
-    "nonew": true,
-    "nomen": false,
-    "plusplus": false,
-    "sub": true,
-    "trailing": true,
-    "white": true,
-    "indent": 4
+    "eslint": "^4.10.0",
+    "eslint-config-qubyte": "^1.1.0"
   }
 }
